cmake_minimum_required(VERSION 3.17)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp)
#add_executable(LeetCode1 contests/20211212/1.cpp)
#add_executable(LeetCode2 contests/20211212/2.cpp)
#add_executable(LeetCode3 contests/20211212/3.cpp)
#add_executable(LeetCode4 contests/20211212/4.cpp)

add_executable(LeetCode20220227_1 contests/20220227/1.cpp)
add_executable(LeetCode20220227_2 contests/20220227/2.cpp)
add_executable(LeetCode20220227_3 contests/20220227/3.cpp)
add_executable(LeetCode20220227_4 contests/20220227/4.cpp)

add_executable(LeetCode20220327_1 contests/20220327/1.cpp)
add_executable(LeetCode20220327_2 contests/20220327/2.cpp)
add_executable(LeetCode20220327_3 contests/20220327/3.cpp)
add_executable(LeetCode20220327_4 contests/20220327/4.cpp)

add_executable(LeetCode20220619_1 contests/20220619/1.cpp)
add_executable(LeetCode20220619_2 contests/20220619/2.cpp)
add_executable(LeetCode20220619_3 contests/20220619/3.cpp)
add_executable(LeetCode20220619_4 contests/20220619/4.cpp)

add_executable(LeetCode20220710_1 contests/20220710/1.cpp)
add_executable(LeetCode20220710_2 contests/20220710/2.cpp)
add_executable(LeetCode20220710_3 contests/20220710/3.cpp)
add_executable(LeetCode20220710_4 contests/20220710/4.cpp)

add_executable(LeetCode20220717_1 contests/20220717/1.cpp)
add_executable(LeetCode20220717_2 contests/20220717/2.cpp)
add_executable(LeetCode20220717_3 contests/20220717/3.cpp)
add_executable(LeetCode20220717_4 contests/20220717/4.cpp)

add_executable(LeetCode20220925_4 contests/20220925/4.cpp contests/20220925/4.cpp)

add_executable(p856 "problems/856. 括号的分数.cpp")
add_executable(p801 "problems/801. 使序列递增的最小交换次数.cpp")
